--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
+    "@types/ncp": "^2.0.5",
     "@types/node": "^16.10.3",
     "@types/shelljs": "^0.8.9",
     "fs-extra": "^10.0.0",
@@ -26,6 +27,8 @@
     "tslint": "^6.1.3",
     "typescript": "^4.4.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ncp": "^2.0.0"
+  },
   "description": ""
 }
