--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd client && npm run start",
+    "client": "npm run start --prefix ..\\client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
@@ -22,7 +22,8 @@
   "dependencies": {
     "config": "^3.3.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-cmd": "^5.0.0"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
