--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://0.0.0.0:5001",
   "browserslist": {
     "production": [
       ">0.2%",
