--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/mikhailKhmel/code-generator#readme",
   "dependencies": {
+    "archiver": "^5.3.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "node-cmd": "^5.0.0"
+    "node-cmd": "^5.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
