--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "newman": "^5.3.2",
+    "async": "^3.2.3"
   }
 }
