--- a/server/package.json
+++ b/server/package.json
@@ -28,9 +28,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
+    "async": "^3.2.3",
     "concurrently": "^6.3.0",
-    "nodemon": "^2.0.15",
     "newman": "^5.3.2",
-    "async": "^3.2.3"
+    "nodemon": "^2.0.15"
   }
 }
